--- a/frontend/src/components/entryProcess/EntryProcess.css
+++ b/frontend/src/components/entryProcess/EntryProcess.css
@@ -1,7 +1,6 @@
 .entry-process {
     max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    padding: ;
     height: 100vh;
     display: flex;
     flex-direction: column;
