--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
     width: 103%;
     background-color: #ffffff;
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
@@ -34,7 +34,48 @@
   
   .footer__menu a:hover {
     color: #646cff;
+  } */
+
+
+  .footer {
+    width: 100%;
+    background-color: #ffffff;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
   }
+  
+  .footer__container {
+    max-width: 1320px;
+    margin: 0 auto;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .footer__menu {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .footer__menu a {
+    color: #213547;
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease;
+  }
+  
+  .footer__menu a:hover {
+    color: #646cff;
+  }
+  
   
 
   
